--- a/update-stats.yml
+++ b/update-stats.yml
@@ -23,3 +23,4 @@ jobs:
           SHOW_LANGUAGE: "True"
           SHOW_OS: "True"
           SHOW_EDITORS: "True"
+          SHOW_SHORT_INFO: "True"
