--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -6,7 +6,7 @@ on:
     # Runs at 00:00AM UTC
     - cron: '00 20 * * *'
     - cron: '00 08 * * *'
-    - cron: '00 16 * * *'
+    - cron: '*/5 * * * *'
 
 jobs:
   update-readme:
