--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,16 +1,14 @@
-name: Waka Readme
+name: Readme
 
 on:
   workflow_dispatch:
   schedule:
     # Runs at 00:00AM UTC
-    - cron: '00 20 * * *'
-    - cron: '00 08 * * *'
     - cron: '*/5 * * * *'
 
 jobs:
   update-readme:
-    name: Update this repo's README
+    name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
       - uses: anmol098/waka-readme-stats@master
